# kstructs

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cpp/: CMakeLists.txt
cpp/src/: dwarf_builder.cpp  dwarf_builder.h  dwarf_corrections.cpp  dwarf_corrections.h  dwarf_rename.cpp  dwarf_rename.h  dwarf_render.cpp  dwarf_render.h  dwarf_signatures.cpp  dwarf_signatures.h  dwarf_types.h  dwarf_utils.cpp  dwarf_utils.h  main.cpp
src/: dwarf_builder.cpp  dwarf_builder.h  dwarf_corrections.cpp  dwarf_rename.cpp  dwarf_render.h  dwarf_types.h  main.cpp
src/kstructs/: __init__.py  cli.py
src/kstructs/analysis/: dsym.py  dwarf.py  dwarf_emit.py  dwarf_emit_builder.py  dwarf_emit_corrections.py  dwarf_emit_rename.py  dwarf_emit_render.py  dwarf_emit_signatures.py  dwarf_emit_types.py  dwarf_emit_utils.py  dwarf_types.py
tests/: test_type_prefix.py
